fixed alignment and jQuery appear and fade

--- a/tutorial.css
+++ b/tutorial.css
@@ -61,3 +61,15 @@ body, h1, h2, h3, h4, h5, h6, p
 .main ul > li{
 	margin-top: 15px;
 }
+
+.centerLink
+{
+	text-align:center;
+}
+
+#close
+{
+	float:right;
+	margin-right:25px;
+	margin-top:20px;
+}
